k8s/namespace.yml
---
kind: Namespace
apiVersion: v1
metadata:
  name: avalanche
  labels:
    name: avalanche
