k8s/server-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: avalanche-backend
  namespace: avalanche
spec:
  ports:
    - port: 8000
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: avalanche-backend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: avalanche-backend
  namespace: avalanche
  labels:
    app: avalanche-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: avalanche-backend
  template:
    metadata:
      labels:
        app: avalanche-backend
    spec:
      containers:
        - name: avalanche-backend
          image: registry.gitlab.com/sethitow/avalanche-server/server:latest
          ports:
            - name: http
              containerPort: 8000
              protocol: TCP
