k8s/ingress.yml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: avalanche
  namespace: avalanche
  annotations:
      kubernetes.io/ingress.class: nginx
      certmanager.k8s.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
      - avalanche.sethitow.com
      secretName: letsencrypt-prod
  rules:
    - host: avalanche.sethitow.com
      http:
        paths:
          - path: /
            backend:
              serviceName: avalanche-server
              servicePort: http
